# dspy-spotlight

./: .gitignore  DEMO.md  README.md  benchmark_asr.py  benchmark_performance.py  demo.py  example.py  pyproject.toml  requirements.txt  spotlighting.py  spotlighting.txt  test_integration.py  test_spotlighting.py
